修改成支持jdk8 & deploy正式库