@@ -2,6 +2,7 @@ package me.zhangjh.gemini.pojo;
 
 import lombok.Data;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -21,14 +22,14 @@ public class ChatContent {
      * */
     public static ChatContent buildBySingleText(String text) {
         ChatContent content = new ChatContent();
-        content.setParts(List.of(new TextPart(text)));
+        content.setParts(Collections.singletonList(new TextPart(text)));
         return content;
     }
 
     public static ChatContent buildBySingleText(String text, String role) {
         ChatContent content = new ChatContent();
         content.setRole(role);
-        content.setParts(List.of(new TextPart(text)));
+        content.setParts(Collections.singletonList(new TextPart(text)));
         return content;
     }
 }
